# prelegal

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json  docker-compose.yml
backend/: __init__.py  ai.py  auth.py  database.py  main.py  models.py  pyproject.toml  schemas.py
docs/superpowers/plans/: 2026-03-20-commonpaper-templates.md
docs/superpowers/specs/: 2026-03-20-commonpaper-templates-design.md
frontend/: README.md  jest.config.js  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  page.tsx
frontend/app/__tests__/: page.test.tsx
frontend/components/: ChatInterface.tsx  ChatMessage.tsx  DownloadButton.tsx  ModeToggle.tsx  NDAForm.tsx  NDAPreview.tsx
frontend/components/__tests__/: DownloadButton.test.tsx  NDAForm.test.tsx  NDAPreview.test.tsx
frontend/data/: mutualNda.ts
frontend/hooks/: useChat.ts
frontend/lib/: api.ts  pdfGenerator.ts  templateParser.ts
frontend/lib/__tests__/: pdfGenerator.test.ts  templateParser.test.ts
frontend/types/: api.ts  chat.ts  nda.ts
scripts/: fetch_templates.py  start-linux.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
templates/: CC-BY-4.0-ATTRIBUTION.txt
